k8s/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phillies-stats-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phillies-stats-api
  template:
    metadata:
      labels:
        app: phillies-stats-api
    spec:
      containers:
        - name: phillies-stats-api
          image: phillies-stats-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
