k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phillies-stats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phillies-stats
  template:
    metadata:
      labels:
        app: phillies-stats
    spec:
      imagePullSecrets:
        - name: dockerhub-creds
      containers:
        - name: phillies-stats
          image: jsaviello1/phillies-stats:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
