k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phillies-stats-api
spec:
  type: ClusterIP
  selector:
    app: phillies-stats-api
  ports:
    - port: 8080
      targetPort: 8080
