k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phillies-stats
spec:
  type: NodePort
  selector:
    app: phillies-stats
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
