k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phillies-stats
spec:
  ingressClassName: nginx
  rules:
    - host: phillies-stats.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: phillies-stats-api
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phillies-stats
                port:
                  number: 80
